fix hub.html bug on smaller screen

--- a/cssFiles/hub.css
+++ b/cssFiles/hub.css
@@ -10,7 +10,6 @@ body{
 
 .about{
     color: #e2d6c3;
-    padding: 40px;
     margin-top: 20px;
     padding-bottom: 20px;
 }
@@ -52,7 +51,7 @@ main{
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: row;
+  flex-direction: column;
 }
 
 form {
